On macos was added RedisCache     method ToGetUserFromEmail globally refactored

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=car_db;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=car_db;Username=postgres;Password=postgres",
+    "Redis": "localhost:6379"
   },
   "Jwt": {
     "Issuer": "JWTAuthServer",
